--- a/mobile.html
+++ b/mobile.html
@@ -40,6 +40,7 @@ an HTML5 mobile app using jQuery Mobile
 <script type="text/javascript" src="static/jquery.popup.js"></script>
 <script type="text/javascript" src="http://code.jquery.com/mobile/1.0a4/jquery.mobile-1.0a4.min.js"></script>
 <script type="text/javascript" src="forcetk.js"></script>
+<script type="text/javascript" src="mobileapp.js"></script>
 <script type="text/javascript">
 // OAuth Configuration
 var loginUrl    = 'https://login.salesforce.com/';
@@ -85,48 +86,7 @@ function sessionCallback(oauthResponse) {
         client = new forcetk.Client(oauthResponse.access_token, null,
             oauthResponse.instance_url, proxyUrl);
 
-	    // Add click listeners
-	    $j('#newbtn').click(function(e){
-	        // Show the 'New Account' form
-	        e.preventDefault();
-	        $j('#accountform')[0].reset();
-	        $j('#accformheader').html('New Account');
-	        setButtonText('#actionbtn','Create');
-	        $j('#actionbtn').unbind('click.btn').bind('click.btn',createHandler);
-	        $j.mobile.changePage('#editpage',"slide",false,true);
-	    });
-
-	    $j('#deletebtn').click(function(e){
-	        // Delete the account
-	        e.preventDefault();
-	        $j.mobile.pageLoading();
-	        client.del('Account', $j('#accountdetail').find('#Id').val()
-			, function(response) {
-	            getAccounts(function(){
-	                $j.mobile.pageLoading(true);
-	                $j.mobile.changePage('#mainpage',"slide",true,true);
-	            });
-	        });
-	    });
-
-	    $j('#editbtn').click(function(e){
-	        // Get account fields and show the 'Edit Account' form
-	        e.preventDefault();
-	        $j.mobile.pageLoading();
-	        client.retrieve("Account", $j('#accountdetail').find('#Id').val()
-	        , "Name,Id,Industry,TickerSymbol", function(response){
-	            $j('#accountform').find('input').each(function() {
-	                $j(this).val(response[$j(this).attr("name")]);  
-	            });
-	            $j('#accformheader').html('Edit Account');
-	            setButtonText('#actionbtn','Update');
-	            $j('#actionbtn')
-				.unbind('click.btn')
-				.bind('click.btn',updateHandler);
-	            $j.mobile.pageLoading(true);
-	            $j.mobile.changePage('#editpage',"slide",false,true);
-	        });
-	    });
+		addClickListeners();
 
 	    $j.mobile.changePage('#mainpage',"slide",false,true);
 	    $j.mobile.pageLoading();
@@ -135,92 +95,7 @@ function sessionCallback(oauthResponse) {
 	    });
     }
 }
-
-// Populate the account list and set up click handling
-function getAccounts(callback){
-    $j('#accountlist').empty();
-    client.query("SELECT Id, Name FROM Account ORDER BY Name LIMIT 20"
-	, function(response){
-        $j.each(response.records, function() {
-            var id = this.Id;
-            $j('<li></li>')
-            .hide()
-            .append('<a href="#"><h2>'+this.Name+'</h2></a>')
-            .click(function(e){
-                e.preventDefault();
-                $j.mobile.pageLoading();
-                // We could do this more efficiently by adding Industry and
-                // TickerSymbol to the fields in the SELECT, but we want to
-                // show dynamic use of the retrieve function...
-                client.retrieve("Account", id, "Name,Id,Industry,TickerSymbol"
-				, function(response){
-                    $j('#Name').html(response.Name);
-                    $j('#Industry').html(response.Industry);
-                    $j('#TickerSymbol').html(response.TickerSymbol);
-                    $j('#Id').val(response.Id);
-                    $j.mobile.pageLoading(true);
-                    $j.mobile.changePage('#detailpage',"slide",false,true);
-                });
-            })
-            .appendTo('#accountlist')
-            .show();
-        });
-        
-        $j('#accountlist').listview('refresh');
-        
-        if (typeof callback != 'undefined' && callback != null)  {
-            callback();
-        }
-    });
-}
-
-// Gather fields from the account form and create a record
-function createHandler(e){
-    e.preventDefault();
-    var accountform = $j('#accountform');
-    var fields = {};
-    accountform.find('input').each(function() {
-        var child = $j(this);
-        if ( child.val().length > 0 && child.attr("name") != 'Id') {
-            fields[child.attr("name")] = child.val();  
-        }               
-    });
-    $j.mobile.pageLoading();
-    client.create('Account', fields, function(response) {
-        getAccounts(function(){
-            $j.mobile.pageLoading(true);
-            $j.mobile.changePage('#mainpage',"slide",true,true);
-        });
-    });
-}
-
-// Gather fields from the account form and update a record
-function updateHandler(e){
-    e.preventDefault();
-    var accountform = $j('#accountform');
-    var fields = {};
-    accountform.find('input').each(function() {
-        var child = $j(this);
-        if ( child.val().length > 0 && child.attr("name") != 'Id') {
-            fields[child.attr("name")] = child.val();  
-        }               
-    });
-    $j.mobile.pageLoading();
-    client.update('Account', accountform.find('#Id').val(), fields
-	, function(response) {
-        getAccounts(function(){
-            $j.mobile.pageLoading(true);
-            $j.mobile.changePage('#mainpage',"slide",true,true);
-        });
-    });
-}
-
-// Ugh - this is required to change text on a jQuery Mobile button
-// due to the way it futzes with things at runtime
-function setButtonText(id, str) {
-    $j(id).html(str).parent().find('.ui-btn-text').text(str);
-}
-</script>
+  </script>
 </head>
 
 <body>
