Added pointers to jQuery, jQuery-swip etc

--- a/example.html
+++ b/example.html
@@ -33,11 +33,26 @@ Sample HTML page for Force.com JavaScript REST Toolkit
 			Force.com JavaScript REST Toolkit
 		</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<!--
+		jQuery UI - http://jqueryui.com/download
+		-->
 		<link rel="stylesheet" type="text/css" href="static/jquery-ui.css">
 		
+		<!-- 
+		jQuery - http://docs.jquery.com/Downloading_jQuery
+		-->
 		<script type="text/javascript" src="static/jquery.js"></script>
+		<!--
+		From jQuery-swip - http://code.google.com/p/jquery-swip/source/browse/trunk/jquery.popupWindow.js 
+		-->
 		<script type="text/javascript" src="static/jquery.popup.js"></script>
+		<!--
+		jQuery UI - http://jqueryui.com/download
+		-->
 		<script type="text/javascript" src="static/jquery-ui.js"></script>
+		<!--
+		TrimPath Template - http://code.google.com/p/trimpath/downloads/detail?name=trimpath-template-1.0.38.js
+		-->
 		<script type="text/javascript" src="static/template.js"></script>
 		<script type="text/javascript" src="forcetk.js"></script>
 		<script type="text/javascript" src="app.js"></script>
