--- a/mobile.html
+++ b/mobile.html
@@ -37,6 +37,9 @@ an HTML5 mobile app using jQuery Mobile
 -->
 <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0a4/jquery.mobile-1.0a4.min.css" />
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.5.2.min.js"></script>
+<!--
+From jQuery-swip - http://code.google.com/p/jquery-swip/source/browse/trunk/jquery.popupWindow.js 
+-->
 <script type="text/javascript" src="static/jquery.popup.js"></script>
 <script type="text/javascript" src="http://code.jquery.com/mobile/1.0a4/jquery.mobile-1.0a4.min.js"></script>
 <script type="text/javascript" src="forcetk.js"></script>
