Added clarification on file location

--- a/phonegap.html
+++ b/phonegap.html
@@ -27,6 +27,9 @@
 <!--
  Sample HTML page showing use of Force.com JavaScript REST Toolkit from
  a PhoneGap app using jQuery Mobile
+
+ Save this as www/index.html in your PhoneGap project. You'll also need all
+ the .js files referenced below.
  -->
 <html>
     <head>
